--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>ru.workassistantbot</groupId>
 	<artifactId>gusev</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<version>0.1.1-SNAPSHOT</version>
 	<name>gusev</name>
 	<description>MyProject</description>
 	<properties>
@@ -49,6 +50,18 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>ru.workassistantbot.gusev.GusevApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
