Исправил некоторые баги

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-bot.name=MyStudyRabbit_bot
-bot.token=6191159168:AAHaoMl5uIvX-zXfOV_vXaSdrHFO_QWqQfE
-excel.path=src/main/java/ru/workassistantbot/gusev/Datas
+bot.name=WorkAssistantBot_bot
+bot.token=6013460523:AAGs2d9seI05AzePHUeQuCpsgr8x25CDF-4
+excel.path_users=C:/TelegramBot/data/users
+excel.path_prices=C:/TelegramBot/data/prices
+logs.path=C:/TelegramBot/logs
